2005-06-29  Lillian Angel  <langel@redhat.com>

        * javax/swing/plaf/basic/BasicTreeUI.java:
        (BasicTreeUI): Initalization of listeners and instances.
        (createUI): Implementation
        (getHashColor): Implementation
        (setLeftChildIndent): Implementation
        (getLeftChildIndent): Implementation
        (setRightChildIndent): Implementation
        (getRightChildIndent): Implementation
        (setExpandedIcon): Implementation
        (getExpandedIcon): Implementation
        (setCollapsedIcon): Implementation
        (getCollapsedIcon): Implementation
        (setLargeModel): Implementation
        (isLargeModel): Implementation
        (setRowHeight): Implementation
        (getRowHeight): Implementation
        (setCellRenderer): Implementation
        (getCellRenderer): Implementation
        (setModel): Implementation
        (getModel): Implementation
        (setRootVisible): Implementation
        (isRootVisible): Implementation
        (setShowsRootHandles): Implementation
        (getShowsRootHandles): Implementation
        (setCellEditor): Implementation
        (getCellEditor): Implementation
        (setEditable): Implementation
        (isEditable): Implementation
        (setSelectionModel): Implementation
        (getSelectionModel): Implementation
        (getPathForRow): Implementation
        (getRowForPath): Implementation
        (getRowCount): Implementation
        (getClosestPathForLocation): Implementation
        (createPropertyChangeListener): Implementation
        (createMouseListener): Implementation
        (createFocusListener): Implementation
        (createKeyListener): Implementation
        (createSelectionModelPropertyChangeListener): Implementation
        (createTreeSelectionListener): Implementation
        (createCellEditorListener): Implementation
        (createComponentListener): Implementation
        (createTreeExpansionListener): Implementation
        (createLayoutCache): Implementation